--- a/project5-voting/project5-voting.csproj
+++ b/project5-voting/project5-voting.csproj
@@ -62,6 +62,9 @@
     <Reference Include="MimeKit, Version=4.7.0.0, Culture=neutral, PublicKeyToken=bede1c8a46c66814, processorArchitecture=MSIL">
       <HintPath>..\packages\MimeKit.4.7.1\lib\net47\MimeKit.dll</HintPath>
     </Reference>
+    <Reference Include="PayPal, Version=1.9.1.0, Culture=neutral, PublicKeyToken=5b4afc1ccaef40fb, processorArchitecture=MSIL">
+      <HintPath>..\packages\PayPal.1.9.1\lib\net451\PayPal.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Buffers, Version=4.0.3.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Buffers.4.5.1\lib\net461\System.Buffers.dll</HintPath>
@@ -310,6 +313,8 @@
     <Content Include="image\voting.jpg" />
     <Content Include="image\voting2.jpg" />
     <Content Include="imgs\eceecf31-2d75-48c5-bba2-d7965514578d.png" />
+    <Content Include="imgs\howToVote.mp4" />
+    <Content Include="imgs\logoelection.png" />
     <Content Include="js\main.js" />
     <Content Include="lib\animate\animate.css" />
     <Content Include="lib\animate\animate.min.css" />
