--- a/project5-voting/packages.config
+++ b/project5-voting/packages.config
@@ -17,6 +17,7 @@
   <package id="MimeKit" version="4.7.1" targetFramework="net472" />
   <package id="Modernizr" version="2.8.3" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net472" />
+  <package id="PayPal" version="1.9.1" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
   <package id="System.Formats.Asn1" version="8.0.1" targetFramework="net472" />
   <package id="System.Memory" version="4.5.5" targetFramework="net472" />
